# dynamic-fpde-reproducibility-artifact

./: .gitattributes  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: artifact-check.yml  bayesian-openml.yml  bayesian-pipeline-ci.yml  full-seeds.yml  ieee-access-bayesian-fpde-experiments.yml  ieee-access-sensitivity.yml  public-bayesian-fpde-experiments.yml  synthetic-calibration.yml
bayesian-fpde-ieee-access-ieee_full/results_ieee/: bootstrap_confidence_intervals.csv  effect_sizes.csv  faithfulness_method_summary.csv  faithfulness_summary.csv  public_uncertainty_seed_features.csv  public_uncertainty_validation.csv  public_uncertainty_validation_method_summary.csv  public_uncertainty_validation_summary.csv  stability_method_summary.csv  stability_metrics.csv  stability_seed_features.csv  stability_summary.csv  (+5 more)
bayesian_fpde/: __init__.py  baselines.py  bayesian_fpde.py  bootstrap_fpde.py  datasets.py  fpde.py  metrics.py  plotting.py  prototypes.py  stats.py  utils.py
code/: FPDE.py  run_fpde_openml_cc18_experimental_aime_clean.py
configs/: ablation.yaml  case_study.yaml  openml_cc18.yaml  openml_public_4experiments.yaml  openml_public_ieee_access.yaml  smoke.yaml  synthetic.yaml  synthetic_full.yaml
docs/: data_and_code_availability_statement.md  dynamic_fpde_experiments.md  rawfeat_dynamic_fpde_experiments.md  repository_metadata.md  reproducibility_checklist.md
experiments/: __init__.py  aggregate_results.py  analyze_synthetic_full.py  common.py  public_stability_impl.py  public_training_size_impl.py  run_ablation.py  run_case_studies.py  run_faithfulness.py  run_group_local_bayesian_rawfeat_dynamic_fpde.py  run_openml_benchmark.py  run_public_uncertainty_validation.py  run_sensitivity_analysis.py  run_stability.py  run_synthetic_calibration.py  run_training_size_uncertainty.py  sensitivity_impl.py
paper/: main_snippet.tex
scripts/: aggregate_precomputed_results.py  build_ieee_access_tables.py  build_reproducibility_tables.py  check_latex_refs.py  make_dynamic_fpde_tables.py  make_rawfeat_ieee_tables.py  run_full_seed.py  run_rawfeat_lambda_sensitivity.py
tables/: rawfeat_audit_summary.tex  rawfeat_evidence_sign.tex  rawfeat_group_attribution.tex
tests/: test_bayesian_fpde_core.py  test_dynamic_fpde_audio_features.py  test_dynamic_fpde_audio_metrics.py  test_dynamic_fpde_experiment_smoke.py  test_experiment_smoke.py  test_group_local_bayesian_rawfeat_runner.py  test_native_time_dynamic_fpde.py  test_raw_waveform_dynamic_fpde.py  test_rawfeat_ieee_outputs.py  test_rawfeat_representation.py  test_rawfeat_runner_smoke.py  test_synthetic_full_analysis.py
(+5158 files in other folders)
