[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-fpde-reproducibility-artifact"
version = "0.1.0"
description = "Reproducible Dynamic-FPDE experiments for time-resolved prototype-directional audio explanations."
requires-python = ">=3.12"
dependencies = [
  "fpde @ git+https://github.com/fpde-xai/fpde.git@dynamic",
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pyarrow",
]
dynamic-audio = [
  "librosa",
  "soundfile",
]
plot = [
  "matplotlib",
]

[tool.setuptools.packages.find]
include = ["experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
