[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-fpde-reproducibility-artifact"
version = "0.1.0"
description = "Reproducible Dynamic-FPDE experiments for time-resolved prototype-directional audio explanations."
requires-python = ">=3.12"
dependencies = [
  "fpde @ git+https://github.com/fpde-xai/fpde.git@67f9e8829ec2bf82d99e239b443392424f80d84e",
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "tqdm",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pyarrow",
]
dynamic-audio = [
  "soundfile",
]
legacy-audio = [
  "torch",
  "torchaudio",
]
raw-audio-generative = [
  "torch",
  "torchaudio",
  "tqdm",
  "soundfile",
]
plot = [
  "matplotlib",
]
cuda = [
  "cupy-cuda13x",
]

[tool.setuptools.packages.find]
include = ["experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
